fix: scrollbar width

--- a/src/components/BasicLayout/index.less
+++ b/src/components/BasicLayout/index.less
@@ -11,6 +11,7 @@
     flex-direction: column;
     overflow: auto;
     position: relative;
+    margin-right: 8px;
 
     &:extend(.scrollbar all);
   }
