--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -18,7 +18,3 @@
     background: #ededed;
   }
 }
-
-.color {
-  color: red;
-}
